--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Gilroy';
     margin: 0;
     background-color: #0B1D26;
-    background-image: url("/img/bg/BG.jpg");
+    background-image: url("img/bg/BG.jpg");
     background-size: 100% auto;
     background-repeat: no-repeat;
     color: #fff;
